Circumvent 'scale_both' Bokeh bug

--- a/templates/mean.html
+++ b/templates/mean.html
@@ -1,8 +1,15 @@
 <html>
 <head>
   <title>Hulten's fantastiska medelvärde!</title>
-  <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-{{bokeh_version}}.min.css" type="text/css">
   <script src="https://cdn.pydata.org/bokeh/release/bokeh-{{bokeh_version}}.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-{{bokeh_version}}.min.css" type="text/css">
+  <style>
+    html, body, .bk-root {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+  </style>
 </head>
 <body>
   <div>
