--- a/templates/mean.html
+++ b/templates/mean.html
@@ -1,19 +1,33 @@
 <html>
 <head>
-  <title>Hulten's fantastiska medelvärde!</title>
+  <title>Resultat av personlighetstest</title>
   <script src="https://cdn.pydata.org/bokeh/release/bokeh-{{bokeh_version}}.min.js"></script>
   <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-{{bokeh_version}}.min.css" type="text/css">
   <style>
-    html, body, .bk-root {
+    html,body {
         width: 100%;
         height: 100%;
         margin: 0;
     }
+    .plot, .footer {
+        width: 80%;
+        margin: auto;
+    }
+    .plot {
+        height: 80%;
+        margin-top: 5em;
+    }
+    h2 {
+      margin-top: 5em;
+    }
   </style>
 </head>
 <body>
-  <div>
+  <div class="plot">
     {{plot|safe}}
+  </div>
+  <div class="footer">
+    {{footer|safe}}
   </div>
 </body>
 <html>
